online-zoo/assets/styles/header.css
.header{
  padding: 12px;
  width: 100%;
  box-sizing: border-box;
  background: var( --black);
}

.header__content{
  display: flex;
  align-items: center;
  max-width: 1160px;
  margin: 0 auto;
}

nav{
  margin-left: 20px;
  width: 100%;
}

.navigation{
  display: flex;
  list-style: none;
}
.navigation__item{
  margin-left: 15px;
  margin-right: 43px;
}

.navigation__link{
  color: var(--light-gray);
  text-decoration: none;
}

.navigation__link:hover{
  color: var( --orange);
}

.navigation__link_active{
  color: var( --orange);
  cursor: default;
}

@media screen and (min-width: 1000px) and (max-width: 1080px) {

  .header{
    padding: 15px;
  }

  .header__content{
    max-width: 1000px;
  }

  .navigation__item{
    margin-left: 20px;
    margin-right: 29px;
  }
  
}

